# bevy-boids

./: Cargo.toml  game-config.json
src/: main.rs
