[package]
name = "bevy-boids"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
json_typegen = "0.7"